--- a/index.html
+++ b/index.html
@@ -3,45 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>To-Do List</title>
     <link rel="stylesheet" href="style/style.css">
-    <script src="javascript.js"></script>
 </head>
 <body>
-    <h2>BUILD TO-DO LIST</h2>
-
-    <input type="text" id="taskInput">
-    <button onclick="addele()">ADD</button><br><br>
-
-    <ul id="taskList"></ul>
-    
-
-    <script>
-        function addele(){
-            const taskInput=document.getElementById("taskInput");
-            const taskList=document.getElementBy("tasklist")
-
-            const li=document.createElement("li");
-            li.textContent=taskInput.value;
-
-            const delbutton=document.createElement('button');
-            delbutton.textContent='DELETE';
-
-            delbutton.onclick=function(){
-                taskList.removeChild(li);
-
-            };
-            li.appendChild(delbutton);
-            taskList.appendChild(li);
-
-            taskInput.value="";
-        }
-        function delete(){
-
-        }
-        
-    </script>
-
-
+    <div class="container">
+        <h1>BUILD TO-DO LIST</h1>
+        <input type="text" id="taskinput" placeholder="Add some task">
+        <button onclick="addTask()">ADD</button>
+        <ul id="taskList"></ul>
+    </div>
+    <script src="javascript.js"></script>
 </body>
 </html>
